--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,13 +3,13 @@
   <nav class="sidebar bg-light p-3">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link" routerLink="members">Members</a>
+        <button class="nav-link btn btn-link" routerLink="/members">Members</button>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="trainers">Trainers</a>
+        <button class="nav-link btn btn-link" routerLink="/Trainers">Trainers</button>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="classes">Classes</a>
+       <button class="nav-link btn btn-link" routerLink="/Classes">Classes</button>
       </li>
     </ul>
   </nav>
